syntax = "proto3";

package calculator;

option go_package = "github.com/tolgazorlu/grpc-go/calculator/proto";

message SumRequest{
    int32 first_value = 1;
    int32 second_value = 2;
}

message SumResponse{
    int32 result = 1;
}
